# django-bettertemplates

./: .gitignore  AUTHORS.rst  HISTORY.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  setup.py
bettertemplates/templatetags/: __init__.py  bettertemplates_tags.py
example/example/: settings.py  urls.py  views.py
example/example/templates/example/: base.html  example.html  includable_template.html
