[tool.poetry]
name = "django-bettertemplates"
version = "0.0.1"
description = ""
authors = ["Sascha Narr <hi@saschanarr.com>"]
repository = "https://github.com/sinnwerkstatt/django-bettertemplates"
keywords = ["django", "templates"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.6"
django = "<2"
six = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
